# ayatori

./: .gitignore  BNF.md  Cargo.toml  Makefile  README.md  index.html  index.js  package.json
example/service_A/develop/: sns_subscription.tf  sns_topic.tf
example/service_B/develop/: sns_subscription.tf  sns_topic.tf
example/service_C/develop/: sns_subscription.tf  sns_topic.tf
example/service_D/develop/: sns_subscription.tf  sns_topic.tf
example/service_E/develop/: sns_subscription.tf  sns_topic.tf
example/service_F/develop/: sns_subscription.tf  sns_topic.tf
example/service_G/develop/: sns_subscription.tf  sns_topic.tf
src/: arg_matcher.rs  bin.rs  builder.rs  lexer.rs  lib.rs  main.rs  model.rs  par_bin.rs  parser.rs  resource.rs  scanner.rs  service.rs  subscription.rs  token_type.rs
