[package]
name = "ayatori"
version = "0.1.0"
authors = ["makanai5610 <takumi.k.5610@gmail.com>"]
edition = "2018"

[lib]
name = "ayatori"
path = "src/lib.rs"

[[bin]]
name = "ayatori-driver"
path = "src/bin.rs"

[[bin]]
name = "ayatori-par-driver"
path = "src/par_bin.rs"

[dependencies]
clap = ""
petgraph = { version="", features=["serde-1"] }
rayon = ""
crossbeam = ""
serde = ""
serde_derive = ""
serde_json = ""
