[package]
name = "ayatori"
version = "0.1.0"
authors = ["makanai5610 <takumi.k.5610@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "ayatori"
path = "src/lib.rs"

[features]
default = ["console_error_panic_hook"]

[[bin]]
name = "ayatori-driver"
path = "src/bin.rs"

[dependencies]
clap = ""
petgraph = { version="", features=["serde-1"] }
rayon = ""
crossbeam = ""
serde = ""
serde_derive = ""
serde_json = ""

wasm-bindgen = ""
console_error_panic_hook = { version="", optional=true}
wee_alloc = ""
